03-kong-ingress-multiple-backends/app-v1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: app-v1
        image: kong-ingress-multi-backends
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
