03-kong-ingress-multiple-backends/app-v2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-v2
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: app-v2
