03-kong-ingress-multiple-backends/simple-apps-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-apps
spec:
  parentRefs:
  - name: kong
  hostnames:
  - 'simple-apps.isc'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app-v1
      kind: Service
      port: 5000
    # weight: 300
    - name: app-v2
      kind: Service
      port: 5000
    # weight: 100
